--- a/tansci-view/package.json
+++ b/tansci-view/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "element-plus": "^1.2.0-beta.5",
+    "nprogress": "^0.2.0",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
@@ -15,7 +16,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
     "axios": "^0.24.0",
-    "sass-loader": "^12.3.0",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
     "vite": "^2.6.4"
   }
 }
