--- a/tansci-view/package.json
+++ b/tansci-view/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@element-plus/icons": "0.0.11",
+    "echarts": "^5.2.2",
     "element-plus": "^1.3.0-beta.1",
     "nprogress": "^0.2.0",
     "vue": "^3.2.16",
