--- a/tansci-view/package.json
+++ b/tansci-view/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@element-plus/icons": "0.0.11",
     "echarts": "^5.2.2",
-    "element-plus": "^1.3.0-beta.1",
+    "element-plus": "^2.0.2",
     "nprogress": "^0.2.0",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12",
