--- a/tansci-view/package.json
+++ b/tansci-view/package.json
@@ -7,19 +7,17 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@element-plus/icons": "0.0.11",
     "echarts": "^5.2.2",
-    "element-plus": "^2.0.2",
+    "element-plus": "^2.2.2",
     "nprogress": "^0.2.0",
-    "vue": "^3.2.16",
-    "vue-router": "^4.0.12",
-    "vuex": "^4.0.2"
+    "pinia": "^2.0.13",
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
     "axios": "^0.24.0",
-    "less": "^4.1.2",
-    "less-loader": "^10.2.0",
-    "vite": "^2.6.4"
+    "sass": "^1.51.0",
+    "vite": "^2.9.9"
   }
 }
